syntax = "proto3";

package ssoready.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

service SSOReadyService {
  rpc GetSAMLRedirectURL(GetSAMLRedirectURLRequest) returns (GetSAMLRedirectURLResponse) {
    option (google.api.http) = {
      post: "/v1/saml/redirect",
      body: "*"
    };
  };

  rpc RedeemSAMLAccessCode(RedeemSAMLAccessCodeRequest) returns (RedeemSAMLAccessCodeResponse) {
    option (google.api.http) = {
      post: "/v1/saml/redeem",
      body: "*"
    };
  };

  rpc VerifyEmail(VerifyEmailRequest) returns (google.protobuf.Empty);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignOut(SignOutRequest) returns (SignOutResponse);
  rpc Whoami(WhoamiRequest) returns (WhoamiResponse);
  rpc GetOnboardingState(GetOnboardingStateRequest) returns (GetOnboardingStateResponse);
  rpc UpdateOnboardingState(UpdateOnboardingStateRequest) returns (google.protobuf.Empty);
  rpc OnboardingGetSAMLRedirectURL(OnboardingGetSAMLRedirectURLRequest) returns (GetSAMLRedirectURLResponse);
  rpc OnboardingRedeemSAMLAccessCode(OnboardingRedeemSAMLAccessCodeRequest) returns (RedeemSAMLAccessCodeResponse);

  rpc ListEnvironments(ListEnvironmentsRequest) returns (ListEnvironmentsResponse);
  rpc GetEnvironment(GetEnvironmentRequest) returns (Environment);
  rpc CreateEnvironment(CreateEnvironmentRequest) returns (Environment);
  rpc UpdateEnvironment(UpdateEnvironmentRequest) returns (Environment);

  rpc ListAPIKeys(ListAPIKeysRequest) returns (ListAPIKeysResponse);
  rpc GetAPIKey(GetAPIKeyRequest) returns (APIKey);
  rpc CreateAPIKey(CreateAPIKeyRequest) returns (APIKey);
  rpc DeleteAPIKey(DeleteAPIKeyRequest) returns (google.protobuf.Empty);

  rpc ListSAMLOAuthClients(ListSAMLOAuthClientsRequest) returns (ListSAMLOAuthClientsResponse);
  rpc GetSAMLOAuthClient(GetSAMLOAuthClientRequest) returns (SAMLOAuthClient);
  rpc CreateSAMLOAuthClient(CreateSAMLOAuthClientRequest) returns (SAMLOAuthClient);
  rpc DeleteSAMLOAuthClient(DeleteSAMLOAuthClientRequest) returns (google.protobuf.Empty);

  rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse);
  rpc GetOrganization(GetOrganizationRequest) returns (Organization);
  rpc CreateOrganization(CreateOrganizationRequest) returns (Organization);
  rpc UpdateOrganization(UpdateOrganizationRequest) returns (Organization);

  rpc ListSAMLConnections(ListSAMLConnectionsRequest) returns (ListSAMLConnectionsResponse);
  rpc GetSAMLConnection(GetSAMLConnectionRequest) returns (SAMLConnection);
  rpc CreateSAMLConnection(CreateSAMLConnectionRequest) returns (SAMLConnection);
  rpc UpdateSAMLConnection(UpdateSAMLConnectionRequest) returns (SAMLConnection);

  rpc ListSAMLFlows(ListSAMLFlowsRequest) returns (ListSAMLFlowsResponse);
  rpc GetSAMLFlow(GetSAMLFlowRequest) returns (SAMLFlow);

  rpc ParseSAMLMetadata(ParseSAMLMetadataRequest) returns (ParseSAMLMetadataResponse);
}

message AppUser {
  string id = 1;
  string display_name = 2;
  string email = 3;
}

message Environment {
  string id = 1;
  string redirect_url = 2;
  string display_name = 3;
  string auth_url = 4;
  string oauth_redirect_uri = 5;
}

message APIKey {
  string id = 1;
  string environment_id = 2;
  string secret_token = 3;
}

message SAMLOAuthClient {
  string id = 1;
  string environment_id = 2;
  string client_secret = 3;
}

message Organization {
  string id = 1;
  string environment_id = 2;
  string external_id = 3;
  repeated string domains = 4;
}

message SAMLConnection {
  string id = 1;
  string organization_id = 2;
  bool primary = 8;
  string idp_redirect_url = 3;
  string idp_certificate = 4;
  string idp_entity_id = 5;
  string sp_entity_id = 6;
  string sp_acs_url = 7;
}

message SAMLFlow {
  string id = 1;
  string saml_connection_id = 2;
  SAMLFlowStatus status = 17;

  oneof error {
    google.protobuf.Empty unsigned_assertion = 22;
    string bad_issuer = 18;
    string bad_audience = 19;
    string bad_subject_id = 20;
    string email_outside_organization_domains = 21;
  }

  string state = 3;
  string email = 4;
  map<string, string> attributes = 5;

  google.protobuf.Timestamp create_time = 6;
  google.protobuf.Timestamp update_time = 7;

  string auth_redirect_url = 8;
  google.protobuf.Timestamp get_redirect_time = 9;

  string initiate_request = 10;
  google.protobuf.Timestamp initiate_time = 11;

  string assertion = 12;
  string app_redirect_url = 13;
  google.protobuf.Timestamp receive_assertion_time = 14;

  google.protobuf.Timestamp redeem_time = 15;
  string redeem_response = 16;
}

enum SAMLFlowStatus {
  SAML_FLOW_STATUS_UNSPECIFIED = 0;
  SAML_FLOW_STATUS_IN_PROGRESS = 1;
  SAML_FLOW_STATUS_FAILED = 2;
  SAML_FLOW_STATUS_SUCCEEDED = 3;
}

message GetSAMLRedirectURLRequest {
  string saml_connection_id = 1;
  string organization_id = 2;
  string organization_external_id = 3;
  string state = 4;
}

message GetSAMLRedirectURLResponse {
  string redirect_url = 1;
}

message RedeemSAMLAccessCodeRequest {
  string saml_access_code = 1;
}

message RedeemSAMLAccessCodeResponse {
  string email = 1;
  string state = 2;
  map<string, string> attributes = 3;
  string organization_id = 4;
  string organization_external_id = 5;
  string saml_flow_id = 6;
}

message VerifyEmailRequest {
  string email = 1;
}

message SignInRequest {
  string google_credential = 1;
  string email_verify_token = 2;
}

message SignInResponse {
  string session_token = 1;
}

message SignOutRequest {
}

message SignOutResponse {
}

message WhoamiRequest {
}

message WhoamiResponse {
  string app_user_id = 1;
  string display_name = 2;
  string email = 3;
}

message GetOnboardingStateRequest {
}

message GetOnboardingStateResponse {
  string dummyidp_app_id = 1;
  string onboarding_environment_id = 2;
  string onboarding_organization_id = 3;
  string onboarding_saml_connection_id = 4;
}

message UpdateOnboardingStateRequest {
  string dummyidp_app_id = 1;
  string onboarding_environment_id = 2;
  string onboarding_organization_id = 3;
  string onboarding_saml_connection_id = 4;
}

message OnboardingGetSAMLRedirectURLRequest {
  string api_key_secret_token = 1;
  string saml_connection_id = 2;
}

message OnboardingRedeemSAMLAccessCodeRequest {
  string api_key_secret_token = 1;
  string saml_access_code = 2;
}

message ListEnvironmentsRequest {
  string page_token = 1;
}

message ListEnvironmentsResponse {
  repeated Environment environments = 1;
  string next_page_token = 2;
}

message GetEnvironmentRequest {
  string id = 1;
}

message CreateEnvironmentRequest {
  Environment environment = 1;
}

message UpdateEnvironmentRequest {
  Environment environment = 1;
}

message ListAPIKeysRequest {
  string environment_id = 1;
  string page_token = 2;
}

message ListAPIKeysResponse {
  repeated APIKey api_keys = 1;
  string next_page_token = 2;
}

message GetAPIKeyRequest {
  string id = 1;
}

message CreateAPIKeyRequest {
  APIKey api_key = 1;
}

message DeleteAPIKeyRequest {
  string id = 1;
}

message ListSAMLOAuthClientsRequest {
  string environment_id = 1;
  string page_token = 2;
}

message ListSAMLOAuthClientsResponse {
  repeated SAMLOAuthClient saml_oauth_clients = 1;
  string next_page_token = 2;
}

message GetSAMLOAuthClientRequest {
  string id = 1;
}

message CreateSAMLOAuthClientRequest {
  SAMLOAuthClient saml_oauth_client = 1;
}

message DeleteSAMLOAuthClientRequest {
  string id = 1;
}

message ListOrganizationsRequest {
  string environment_id = 1;
  string page_token = 2;
}

message ListOrganizationsResponse {
  repeated Organization organizations = 1;
  string next_page_token = 2;
}

message GetOrganizationRequest {
  string id = 1;
}

message CreateOrganizationRequest {
  Organization organization = 1;
}

message UpdateOrganizationRequest {
  Organization organization = 1;
}

message ListSAMLConnectionsRequest {
  string organization_id = 1;
  string page_token = 2;
}

message ListSAMLConnectionsResponse {
  repeated SAMLConnection saml_connections = 1;
  string next_page_token = 2;
}

message GetSAMLConnectionRequest {
  string id = 1;
}

message CreateSAMLConnectionRequest {
  SAMLConnection saml_connection = 1;
}

message UpdateSAMLConnectionRequest {
  SAMLConnection saml_connection = 1;
}

message ListSAMLFlowsRequest {
  string saml_connection_id = 1;
  string page_token = 2;
}

message ListSAMLFlowsResponse {
  repeated SAMLFlow saml_flows = 1;
  string next_page_token = 2;
}

message GetSAMLFlowRequest {
  string id = 1;
}

message ParseSAMLMetadataRequest {
  string url = 1;
}

message ParseSAMLMetadataResponse {
  string idp_redirect_url = 1;
  string idp_certificate = 2;
  string idp_entity_id = 3;
}
